# efficient-dialogue-state-tracking-by-sequential-information-processing

./: .gitignore  README.md  makefile  pyproject.toml
conf/: config.yaml  infer_sequential.yaml
conf/callbacks/: early_stopping.yaml  generate_and_log_text.yaml  log_grad_norm.yaml  log_model_predictions.yaml  lr_monitor.yaml  model_checkpoint.yaml  prediction_writer.yaml  rich_model_summary.yaml  rich_progbar.yaml
conf/data_conf/: config.yaml
conf/data_conf/history_serializer/: zipped.yaml
conf/data_conf/schema_serializer/: simple.yaml
conf/data_conf/state_serializer/: formal_language.yaml  key_value_state.yaml  key_value_state_changes.yaml  natural_language.yaml  natural_language_state_changes.yaml  table.yaml
conf/loggers/: csv.yaml  dvc_logger.yaml  tensorboard.yaml
conf/optimizer/: adafactor.yaml  adamw.yaml  base.yaml
conf/scheduler/: constant_schedule.yaml  constant_schedule_with_warmup.yaml  cosine_schedule_with_warmup.yaml  cosine_with_hard_restarts_schedule_with_warmup.yaml  linear_schedule_with_warmup.yaml  polynomial_decay_schedule_with_warmup.yaml
notebooks/: eval_experiment_1.ipynb  eval_experiment_2.ipynb  eval_experiment_2_somdst.ipynb  eval_experiment_3.ipynb  s.ipynb
scripts/: infer.py  prepare_data.py  prepare_data_sgd.py  process_data.py  train.py
src/: callbacks.py  evaluation.py  model.py
src/data/: datamodule.py  dataset.py  serializers.py  utilities.py
src/utilities/: enums.py  logging.py
